--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ body {
 }
 
 #workingArea{
+    position: relative;
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
     max-width: 1920px;
     height: 100vh;
     /* background-color: aqua; */
@@ -48,6 +49,8 @@ body {
     width: 100%;
     padding: 20px 0px;
     /* border: 1px solid white; */
+    /* font-family: "gilroy"; */
+
 }
 
 #nav img{
@@ -68,3 +71,50 @@ body {
     color: #fff;
     /* font-family: ; */
 }
+
+#hero{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0%, -50%);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* height: 100px; */
+    /* background-color: red; */
+}
+#heroLeft{
+    min-width: 50%;
+    /* height: 100px; */
+    /* background-color: yellow; */
+}
+
+#heroLeft .elem{
+    height: 9vw;
+    background-color: #bbb;
+    overflow: hidden;
+}
+
+#heroLeft .elem h1{
+    margin-top: 0;/**/
+    padding: 0; /**/
+    line-height: 0.9;
+    font-family: "kajiro";
+    color: #fff;
+    font-weight: 100 ;
+    font-size: 11vw;
+}
+
+#heroLeft button{
+    padding: 0.8vw 3vw;
+    font-size: 3vw;
+    margin-top: 2vw;
+    font-family: "kajiro";
+}
+
+#heroRight{
+    min-width: 25%;
+    /* height: 100px; */
+    background-color: green ;
+}
+
