--- a/style.css
+++ b/style.css
@@ -1,120 +1,154 @@
 * {
-    margin: "0";
-    padding: "0";
-    box-sizing: border-box;
+  margin: "0";
+  padding: "0";
+  box-sizing: border-box;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #main {
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 #back {
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(240, 10, 10);
+  width: 100%;
+  height: 100vh;
+}
+
+#back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #top {
-    position: absolute;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+#workingArea {
+  position: relative;
+  margin: 0 auto;
+  width: 80%;
+  max-width: 1920px;
+  height: 100vh;
+}
+
+#nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 40px 0px;
+  /* border: 1px solid white; */
+}
+
+#nav img {
+  height: 60px;
+}
+
+#nav_left,
+#nav_right {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+
+#nav a {
+  pointer-events: all;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  color: #fff;
+}
+
+#hero {
+  position: absolute;
+  top: 50%; /* 50% */
+  left: 0;
+  margin-top: 50px;
+  transform: translate(0%, -50%);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  /* height: 100vh; */
+  /* background-color: rgb(64, 255, 0); */
+}
+#heroLeft {
+  min-width: 50%;
+  /* height: 100px; */
+  /* background-color: yellow; */
+}
+
+#heroLeft .elem {
+  position: relative;
+  height: 5vw; /* 9vw */
+  overflow: hidden;
+  /* background-color: #0b0b0b; */
+  /* margin-bottom: 1px; */
+}
+
+#heroLeft .elem h1:nth-child(1){
     top: 0;
-    left: 0;
-    /* bottom: 0;
-    right: 0; */
-    width: 100%;
-    height: 100vh;
-    background-color: #000;
 }
 
-#workingArea{
-    position: relative;
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1920px;
-    height: 100vh;
-    /* background-color: aqua; */
-    border: 1px solid red;
+#heroLeft .elem h1 {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin: 0; 
+  padding: 2px 0px 2px 2px; 
+  line-height: 0.9;
+  font-family: "kajiro";
+  color: #fff;
+  font-weight: 100;
+  font-size: 3vw;/*11 vw*/
+  font-family:'Times New Roman', Times, serif;
 }
 
-#nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 20px 0px;
-    /* border: 1px solid white; */
-    /* font-family: "gilroy"; */
-
+#heroLeft button {
+  pointer-events: all;
+  padding: 0.8vw 3vw;
+  font-size: 3vw;
+  margin-top: 2vw;
+  font-family: "kajiro";
 }
 
-#nav img{
-    height: 60px;
+#heroRight {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 25%; /*17%*/
+  color: #fff;
 }
 
-#nav_left , #nav_right {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+#heroRight p {
+  font-size: 14px;
+  font-weight: 300;
+  text-align: right;
+  /* margin-bottom: 50px; */
 }
 
-#nav a{
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 600;
-    color: #fff;
-    /* font-family: ; */
+#heroRight #imgdiv {
+  width: 100%;
+  height: 170px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  background-image: url("https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
 }
 
-#hero{
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(0%, -50%);
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    /* height: 100px; */
-    /* background-color: red; */
+#heroRight p:nth-child(3) {
+  margin-bottom: 50px; /*100px*/
 }
-#heroLeft{
-    min-width: 50%;
-    /* height: 100px; */
-    /* background-color: yellow; */
-}
-
-#heroLeft .elem{
-    height: 9vw;
-    background-color: #bbb;
-    overflow: hidden;
-}
-
-#heroLeft .elem h1{
-    margin-top: 0;/**/
-    padding: 0; /**/
-    line-height: 0.9;
-    font-family: "kajiro";
-    color: #fff;
-    font-weight: 100 ;
-    font-size: 11vw;
-}
-
-#heroLeft button{
-    padding: 0.8vw 3vw;
-    font-size: 3vw;
-    margin-top: 2vw;
-    font-family: "kajiro";
-}
-
-#heroRight{
-    min-width: 25%;
-    /* height: 100px; */
-    background-color: green ;
-}
-
